force-app/main/default/objects/sugati__Trip_Planner_Preference__c/sugati__Trip_Planner_Preference__c.object-meta.xml
<CustomObject>
    <label>Trip Planner Preference</label>
    <nameField>
        <displayFormat>TPP-{000000}</displayFormat>
        <label>Trip Planner Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Planner Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>