force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Column_Widths__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Column_Widths__c</fullName>
    <description>JSON formatted object describing column widths for trip planner</description>
    <label>Column Widths</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>