force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Component_View__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Component_View__c</fullName>
    <description>Choose how to colour-code the component field. &quot;Full&quot; = highlight entire field. &quot;Indicator&quot; = Show coloured circle to left of field. &quot;None&quot; = No highlighting.</description>
    <inlineHelpText>Choose how to colour-code the component field. &quot;Full&quot; = highlight entire field. &quot;Indicator&quot; = Show coloured circle to left of field. &quot;None&quot; = No highlighting.</inlineHelpText>
    <label>Component Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Indicator</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>