force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Default_Freeze__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Default_Freeze__c</fullName>
    <label>Default Freeze</label>
    <length>255</length>
    <type>Text</type>
</CustomField>