force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Default_Grouping__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Default_Grouping__c</fullName>
    <label>Default Grouping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>