force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Default_Row_Height__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Default_Row_Height__c</fullName>
    <label>Default Row Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>