force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Default_Show_Filters__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Default_Show_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Show Filters</label>
    <type>Checkbox</type>
</CustomField>