force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Default_Sorting__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Default_Sorting__c</fullName>
    <label>Default Sorting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>