force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_Hidden_Fields__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_Hidden_Fields__c</fullName>
    <description>Comma separated list of hidden fields from the default view</description>
    <label>Hidden Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>