force-app/main/default/objects/sugati__Trip_Planner_Preference__c/fields/sugati__TPP_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__TPP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trip_Planner_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>