force-app/main/default/objects/sugati__Trip_Planner_Preference__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__TPP_Column_Widths__c</columns>
    <columns>sugati__TPP_Default_Freeze__c</columns>
    <columns>sugati__TPP_Default_Grouping__c</columns>
    <columns>sugati__TPP_Default_Show_Filters__c</columns>
    <columns>sugati__TPP_Default_Sorting__c</columns>
    <columns>sugati__TPP_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>